--- a/index.css
+++ b/index.css
@@ -12,7 +12,10 @@
 }
 
 .lightBackground {
-    background-color: 00FFFF
+    background-color: 00FFFF;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0px 3px 7px lightgrey;
 }
 
 .columnsStyle {
@@ -25,7 +28,10 @@
 }
 
 .darkBackground {
-    background-color: F0FFFF
+    background-color: F0FFFF;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0px 3px 7px lightgrey;
 }
 
 .box {
@@ -41,7 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .cross{
@@ -49,4 +55,39 @@
     font-size: 2.5em;
     border-radius: 5px;
     line-height: 100px;
+}
+
+#message{
+    background: #FF5252;
+    margin: 20px 10px;
+    border-radius: 5px;
+    padding: 20px;
+    color: #fff;
+    display: none;
+    text-align: center;
+}
+
+.show{
+    display: block !important;
+}
+
+.opaque{
+    opacity: 0.7;
+    pointer-events: none;;
+}
+.refresh-container{
+    margin-bottom: 20px;
+    position: relative;
+    left: 45%;
+}
+#refresh-btn{
+    border: 1px solid #FF5252;
+    min-width: 165px;
+    height: 40px;
+    text-align: center;
+    border-radius: 5px;
+    display: none;
+    text-transform: uppercase;
+    color: #FF5252;
+    background: #fff;
 }
